<resources>
    <string name="app_name">DiggingGame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="art_by_full_sail_university">Art by Full Sail University</string>
    <string name="bradley_perkins">Bradley Perkins</string>
    <string name="app_created_by">App Created By:</string>
    <string name="undead_cloak_0">Undead Cloak - 0</string>
    <string name="invis_cloak_0">Invis Cloak - 0</string>
    <string name="elven_cloak_0">Elven Cloak - 0</string>
    <string name="leather_cloak_0">Leather Cloak - 0</string>
    <string name="cape_0">Cape - 0</string>
    <string name="silence_ring_0">Silence Ring - 0</string>
    <string name="reraise_ring_0">Reraise Ring - 0</string>
    <string name="empyreal_ring_0">Empyreal Ring - 0</string>
    <string name="diamond_ring_0">Diamond Ring - 0</string>
    <string name="shell_ring_0">Shell Ring - 0</string>
    <string name="protect_ring_0">Protect Ring - 0</string>
    <string name="hermes_sandels_0">Hermes Sandels - 0</string>
    <string name="feather_boots_0">Feather Boots - 0</string>
    <string name="rubber_boots_0">Rubber Boots - 0</string>
    <string name="holy_body_0">Holy Body - 0</string>
    <string name="holy_boots_0">Holy Boots - 0</string>
    <string name="holy_helm_0">Holy Helm - 0</string>
    <string name="holy_gloves_0">Holy Gloves - 0</string>
    <string name="yue_body_0">Yue Body - 0</string>
    <string name="yue_boots_0">Yue Boots - 0</string>
    <string name="yue_helm_0">Yue Helm - 0</string>
    <string name="yue_gloves_0">Yue Gloves - 0</string>
    <string name="genji_body_0">Genji Body - 0</string>
    <string name="genji_boots_0">Genji Boots - 0</string>
    <string name="genji_helm_0">Genji Helm - 0</string>
    <string name="genji_gloves_0">Genji Gloves - 0</string>
    <string name="steel_boots_0">Steel Boots - 0</string>
    <string name="steel_body_0">Steel Body - 0</string>
    <string name="leather_boots_0">Leather Boots - 0</string>
    <string name="leather_body_0">Leather Body - 0</string>
    <string name="steel_gloves_0">Steel Gloves - 0</string>
    <string name="steel_helm_0">Steel Helm - 0</string>
    <string name="tizona_0">Tizona - 0</string>
    <string name="buster_sword_0">Buster Sword - 0</string>
    <string name="leather_gloves_0">Leather Gloves - 0</string>
    <string name="leather_helm_0">Leather Helm - 0</string>
    <string name="excalibur_0">Excalibur - 0</string>
    <string name="goujian_0">Goujian - 0</string>
    <string name="unnamed_0">Unnamed - 0</string>
    <string name="sword_of_mercy_0">Sword of Mercy - 0</string>
    <string name="chantage_0">Chantage - 0</string>
    <string name="ontachi_0">Ontachi - 0</string>
    <string name="rusty_sword_0">Rusty Sword - 0</string>
    <string name="masamune_0">Masamune - 0</string>
    <string name="ether_0">Ether - 0</string>
    <string name="hi_ether_0">Hi-Ether - 0</string>
    <string name="elixer_0">Elixer - 0</string>
    <string name="ribbon_0">Ribbon - 0</string>
    <string name="x_potion_0">X-Potion - 0</string>
    <string name="hi_potion_0">Hi-Potion - 0</string>
    <string name="potion_0">Potion - 0</string>
    <string name="gold_0">Gold - 0</string>
    <string name="inventory">Inventory</string>
    <string name="treasure_hunt">Treasure Hunt</string>
    <string name="play_game">Play Game</string>
    <string name="credits">Credits</string>
    <string name="inventory1">Inventory</string>
</resources>
