<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.CreditsFragment">

    <TextView
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/app_created_by" />

    <TextView
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/bradley_perkins" />


    <TextView
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/art_by_full_sail_university" />

</LinearLayout>