<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MenuFragment">


    <LinearLayout
        android:elevation="10dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/treasure_hunt" />


        <Button
            android:layout_margin="12dp"
            android:layout_gravity="center"
            android:id="@+id/play_btn"
            android:text="@string/play_game"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="12dp"
            android:layout_gravity="center"
            android:id="@+id/credits_btn"
            android:text="@string/credits"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />


    </LinearLayout>




</FrameLayout>